--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Devin Dahlberg"
 author: "Devin Dahlberg"
-description: "BA - University of Alabama | AS - Calhoun Community College (August 2024)"
+description: "BA - University of Alabama (Graduated May 2023) | AS - Calhoun Community College (August 2024)"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
